--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prueba-tecnica-byte4bit-mauro-v1",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.7.2",
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "@emailjs/browser": "^3.7.0",
+    "@stripe/stripe-js": "^1.42.0",
+    "dotenv": "^16.0.3",
+    "emailjs": "^4.0.1",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.2",
     "next": "12.3.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.25.2",
+    "stripe": "^10.14.0"
   },
   "devDependencies": {
-    "eslint": "8.26.0",
+    "eslint": "8.25.0",
     "eslint-config-next": "12.3.1"
   }
 }
